--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -34,8 +34,8 @@ li.r1 {
 li.r2 {
     background: #fafafa;
 }
-hdr {
+.hdr {
    <!-- top right bottom left -->
-   padding: 5px 0px 5px -5px;
+   padding: 15px 0px 5px -5px;
 }
 
