new docs for R and Bioconductor

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -35,7 +35,8 @@ li.r2 {
     background: #fafafa;
 }
 .hdr {
-   <!-- top right bottom left -->
-   padding: 15px 0px 5px -5px;
+    <!-- top right bottom left -->
+    padding: 15px 0px 5px -5px;
+    color: #123054  <!-- Hutch dark-blue font -->
 }
 
