--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -40,3 +40,15 @@ li.r2 {
     color: #123054  <!-- Hutch dark-blue font -->
 }
 
+.column {
+    float: left;
+    width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
