--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,18 +1,20 @@
 body {
     font-family: Helvetica,Arial,"Calibri","Lucida Grande",sans-serif;
-    font-style: normal;
+    font-weight: normal;
 }
 
 a { padding: 0px 10px 0px 0px; }
 
 .ext_list a {color: black; text-decoration: none; font-weight: bold;}
-.ext_list li:hover {background: #eef; }
 .ext_list a:hover {color: #89c348;}
-span.fh_green {color: #89c348;}  <!-- Hutch Green -->
+span.fh_green {
+    color: #89c348;
+}
 
 .app_name {
     color: #89c348;  /* Hutch Green */
-    font-size: 1.5em;
+    font-weight: bold;
+    font-size: 2.5em;
     margin: 0 10px .5em 20px;
 }
 .logo {
@@ -22,33 +24,20 @@ span.fh_green {color: #89c348;}  <!-- Hutch Green -->
     color: #89c348;
     font-size: 3em;
 }
-.ext_list li {
-    line-height: 2em;
-    border-bottom: 1px solid #ddd;
-    font-size: 1.2em;
-    padding: 3px 5px;
-}
-li.r1 {
-    background: #f0f0f0;
-}
-li.r2 {
-    background: #fafafa;
-}
+.ext_list li:hover a:hover {color: #89c348;}
+
 .hdr {
-    <!-- top right bottom left -->
     padding: 15px 0px 5px -5px;
-    color: #123054  <!-- Hutch dark-blue font -->
+    color: #123054;
 }
 
 .column {
-    float: left;
-    width: 50%;
+    flex: 50%;
+    padding: 10px;
 }
 
 /* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
+.row {
+    display: flex;
 }
 
