--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,7 +22,7 @@
 
         <ul>
             <li><a href="{{ item.url }}/index.html">Inventory</a></li>
-            <li><a href="{{ item.url }}/software.html">Using Software</a></li>
+            <li><a href="{{ site.baseurl }}/software.html">Using Software</a></li>
         </ul>
 
         {% if site.github.is_project_page %}
