convert to Jekyll

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,7 +21,7 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <ul>
-            <li><a href="{{ item.url }}/index.html">Inventory</a></li>
+            <li><a href="{{ site.baseurl }}/index.html">Inventory</a></li>
             <li><a href="{{ site.baseurl }}/software.html">Using Software</a></li>
         </ul>
 
