--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,7 +24,13 @@
         <ul>
             <li><a href="{{ site.baseurl }}/index.html">Inventory</a></li>
             <li><a href="{{ site.baseurl }}/software.html">Using Software</a></li>
+            <li><a href="{{ site.baseurl }}/releases.html">Software Updates</a></li>
         </ul>
+      
+        <p>Addition Fred Hutch documentation for Biomedical systems can
+        be found here: <strong><a href="https://fredhutch.github.io/wiki/">
+                Fred Hutch Biomedical Data Science Wiki</a></p>
+        </strong>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
