update docs to markdown

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -27,7 +27,7 @@
             <li><a href="{{ site.baseurl }}/releases.html">Software Updates</a></li>
         </ul>
       
-        <p>Addition Fred Hutch documentation for Biomedical systems can
+        <p>Additional Fred Hutch documentation for Biomedical systems can
         be found here: <strong><a href="https://fredhutch.github.io/wiki/">
                 Fred Hutch Biomedical Data Science Wiki</a></p>
         </strong>
