--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,9 +22,9 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <ul>
-            <li><a href="{{ site.baseurl }}/index.html">Inventory</a></li>
             <li><a href="{{ site.baseurl }}/software.html">Using Software</a></li>
             <li><a href="{{ site.baseurl }}/releases.html">Software Updates</a></li>
+            <li><a href="{{ site.baseurl }}/README.md">About</a></li>
         </ul>
       
         <p>Additional Fred Hutch documentation for Biomedical systems can
