--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,7 +24,7 @@
         <ul>
             <li><a href="{{ site.baseurl }}/software.html">Using Software</a></li>
             <li><a href="{{ site.baseurl }}/releases.html">Software Updates</a></li>
-            <li><a href="{{ site.baseurl }}/README.md">About</a></li>
+            <li><a href="{{ site.baseurl }}/about.html">About</a></li>
         </ul>
       
         <p>Additional Fred Hutch documentation for Biomedical systems can
