new GH template

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,15 +1,16 @@
 <div class="page__footer-follow">
   <ul class="social-icons">
-          <li><a href="/contributors/"><i class="fas fa-user-edit"></i> See our Contributors</a></li>
+    <li><a href="https://sciwiki.fredhutch.org/">
+      <img src="{{ site.baseurl }}/images/FredHutchTinyLogo.png" alt="SciWiki" width="40" align="left|middle" hspace="0">
+      <i class="fab fa-fw fa-github"></i> Fred Hutch SciWiki</a></li>
 
-          <li><a href="https://github.com/FredHutch/wiki"><i class="fab fa-fw fa-github"></i> See our GitHub Repo</a></li>
+    <li><a href="https://github.com/FredHutch/easybuild-life-sciences"><i class="fab fa-fw fa-github"></i> See our GitHub Repo</a></li>
 
-          <li><a href="https://fhbig.slack.com/"><i class="fab fa-fw fa-slack"> </i> Join the Conversation on Slack</a></li>
+    <li><a href="https://easybuild.readthedocs.io/en/latest/">
+        <i class="fab fa-fw fa-slack"> </i>Learn More About EasyBuild</a></li>
 
-          <li><a href="https://fredhutch.github.io/FHBig/"><img src="{{ site.baseurl }}/images/FHBig.png" alt="fhbig" width="40" align="left|middle" hspace="0"> Find Upcoming Events</a></li>
-
-          <li><a href="https://www.fredhutch.io/"><img src="{{ site.baseurl }}/images/fhio.png" alt="fredhutchio" width="20" align="left|middle" hspace="0"> Find Training</a></li>
-
+    <li><a href="https://github.com/easybuilders/easybuild-easyconfigs">
+        <i class="fab fa-fw fa-slack"> </i>EasyBuild EasyConfigs</a></li>
 
   </ul>
 </div>
