--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,8 +1,7 @@
 <div class="page__footer-follow">
   <ul class="social-icons">
     <li><a href="https://sciwiki.fredhutch.org/">
-      <img src="{{ site.baseurl }}/images/FredHutchTinyLogo.png" alt="SciWiki" width="40" align="left|middle" hspace="0">
-      <i class="fab fa-fw fa-github"></i> Fred Hutch SciWiki</a></li>
+      <img src="{{ site.baseurl }}/images/FredHutchTinyLogo.png" alt="SciWiki" width="40" align="left|middle" hspace="0"> Fred Hutch SciWiki</a></li>
 
     <li><a href="https://github.com/FredHutch/easybuild-life-sciences"><i class="fab fa-fw fa-github"></i> See our GitHub Repo</a></li>
 
