--- a/docs/_includes/masthead.html
+++ b/docs/_includes/masthead.html
@@ -2,8 +2,8 @@
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
-              <a href="{{ site.url }}"><img src="{{ site.baseurl }}/images/Biomedical-Data-Science-Wiki-logo.png" alt="FH biomedical data science wiki icon" width="600" align="left|middle" hspace="0"></a>
-        <!--<a class="site-title" href="{{ '/' | relative_url }}">{{ site.title }}</a>-->
+              <a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/images/FredHutchTinyLogo.png" alt="FH icon" width="75" align="left|middle" hspace="0"></a>
+        <a class="site-title" href="{{ '/' | relative_url }}">{{ site.title }}</a>
 
         <ul class="visible-links">
           {% for link in site.data.navigation.main %}
