--- a/docs/_includes/masthead.html
+++ b/docs/_includes/masthead.html
@@ -13,7 +13,7 @@
           {% assign domain = site.url | append: site.baseurl %}
           {% endif %}
           <li class="masthead__menu-item">
-            <a href="{{ link.url }}" {% if link.description %}title="{{ link.description }}" {% endif %}>{{ link.title
+            <a href="{{ site.baseurl }}/{{ link.url }}" {% if link.description %}title="{{ link.description }}" {% endif %}>{{ link.title
               }}</a>
           </li>
           {% endfor %}
